# bevy_blast_ultra

./: .gitattributes  .gitignore  Cargo.toml
.github/workflows/: release.yaml
assets/: assets_game.assets.ron  default.settings.ron  library.blend
assets/levels/: level_1.gltf  level_2.gltf  level_3.gltf  level_4.gltf  level_5.gltf  level_6.gltf  menu.gltf
assets/textures/tile/: tile.ptex  tile_dark.ptex  tile_dark_rough.exr  tile_rough.exr
assets/textures/window/: window.ptex  window_metal.exr  window_rough.exr
src/: lib.rs  main.rs  util.rs
src/components/: audio.rs  camera.rs  game.rs  mod.rs  player.rs  powerup.rs  util.rs
src/plugins/: assets.rs  audio.rs  camera.rs  gameplay.rs  input.rs  levels.rs  mod.rs  player.rs  powerups.rs  settings.rs  ui.rs  util.rs
src/resources/: assets.rs  game.rs  mod.rs  settings.rs  time.rs
src/state/: game.rs  mod.rs
